# Groupe_15_projet_5

./: App.py  PROMPT_ENGINEERING  final.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: app.py
models/: best_model_CatBoostClassifier.joblib  best_model_LGBMClassifier.joblib  best_model_RandomForestClassifier.joblib  best_model_SVC.joblib
notebook/: coding_week_project_5.ipynb
src/: config.py  data_loader.py  data_processing.py  evaluate_model.py  inference.py  shap_analysis.py  train_model.py
tests/: conftest.py  test_data_loader.py  test_data_processing.py  test_inference.py  test_shap_analysis.py  test_train_model.py
