[project]
name = "groupe-15-projet-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "altair>=6.0.0",
    "bokeh>=3.9.0",
    "boruta>=0.4.3",
    "catboost>=1.2.10",
    "category-encoders>=2.9.0",
    "dask>=2026.1.2",
    "featuretools>=1.31.0",
    "hyperopt>=0.2.7",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mljar-supervised>=1.1.18",
    "numpy>=1.26.4",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "polars>=1.39.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "streamlit>=1.55.0",
    "tsfresh>=0.21.1",
    "ucimlrepo>=0.0.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
